[tool.poetry]
name = "impact"
version = "0.1.0"
description = "Log accomplishments, track impact, and draft promotion narratives"
authors = ["Brian McGowan <brian@nextdaylost.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brian-mcgowan/impact"
repository = "https://github.com/brian-mcgowan/impact"
documentation = "https://github.com/brian-mcgowan/impact"
packages = [{from = "src", include = "impact"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/brian-mcgowan/impact/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
source = ["src"]
